--- a/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
+++ b/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
+    <PackageReference Include="MongoDB.Bson" />
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="Scrutor" />
