--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -57,5 +57,7 @@
     <PackageVersion Include="System.Runtime.Caching" Version="10.0.2" />
     <PackageVersion Include="Twilio" Version="7.14.2" />
     <PackageVersion Include="Twilio.AspNet.Core" Version="8.1.2" />
+    <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.23" />
+    <PackageVersion Include="Hangfire.SqlServer" Version="1.8.23" />
   </ItemGroup>
 </Project>
