--- a/mzstruct/Mzstruct.API/Mzstruct.API.csproj
+++ b/mzstruct/Mzstruct.API/Mzstruct.API.csproj
@@ -29,10 +29,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
     <PackageReference Include="Scalar.AspNetCore" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Mzstruct.Common\Mzstruct.Common.csproj" />
+    <PackageReference Include="Hangfire.AspNetCore" />
+    <PackageReference Include="Hangfire.SqlServer" />
   </ItemGroup>
 
 </Project>
